# shenlan-VIO

./: README.md
ch1/: README.md  homework.md  homework1.md
ch1/homework/code/: CMakeLists.txt  eigensophus.cpp
ch2/: homework.md  readme.md
ch2/homework/code/kalibr_allan-master/matlab/: SCRIPT_allan_matparallel.m  SCRIPT_process_results.m
ch2/homework/code/vio_data_simulation/main/: gener_alldata.cpp
ch2/homework/code/vio_data_simulation/python_tool/: draw_trajcory.py
ch2/homework/code/vio_data_simulation/src/: imu.cpp
ch2/task/: README.md
ch3/: homework.md  readme.md
ch3/homework/LM/backend/: problem.cc
ch3/homework/code/LM/: READE.md
ch3/task/: README.md
ch4/: README.md  homework.md
ch4/homework/code/: README.md
ch4/homework/code/nullspace_test/: hessian_nullspace_test.cpp
ch4/task/: README.md
ch5/: homework.md
ch5/code/hw_course5/app/: TestMonoBA.cpp
ch5/code/hw_course5/backend/: problem.cc
ch5/homework/code/hw_course5_new/backend/: problem.cc
ch5/task/: README.md
ch6/: README.md  homework.md
ch6/homework/code/: CMakeLists.txt  triangulate.cpp
ch6/task/: README.md
ch7/: README.md  homework.md
ch7/code/VINS_course/config/: euroc_config.yaml
ch7/code/VINS_course/test/: run_euroc.cpp
ch7/homework/code/VINS-Course/include/: System.h
ch7/homework/code/VINS-Course/src/: System.cpp
thrid-party/: README.md
大作业/: README.md  homework.md
大作业/homework/code/VINS-course/: CMakeLists.txt  MH_05_sequence  pose_output.txt  pose_output_multi.txt  pose_output_new.txt
大作业/homework/code/VINS-course/config/: euroc_config.yaml
(+7 files in other folders)
